[package]
name = "gameson"
version = "0.1.0"
edition = "2024"
description = "HTMX server-side rendering framework for Rust, based on Axum."
authors = ["Julien Kauffmann"]
repository = "https://github.com/ereOn/gameson"
license-file = "LICENSE"
keywords = ["game-dev", "json", "serialization"]
categories = ["encoding"]


[features]
default = []
uuid = ["dep:uuid"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde"], optional = true }

[dev-dependencies]
serde_json = "1"
